tests/corpus/pass/phase1/244_borrow_param_read.gw
fn read(r: &i32) -> i32 {
    return *r;
}

fn main() -> i32 {
    let x: i32 = 42;
    return read(&x);
}
