tests/corpus/fail/borrow/b04_return_borrow_of_local.gw
fn dangle() -> &i32 {
    let x: i32 = 5;
    return &x;
}

fn main() -> i32 {
    let r: &i32 = dangle();
    return *r;
}
